<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.cloud</groupId>
		<artifactId>spring-cloud-build</artifactId>
		<version>4.0.6</version>
		<relativePath/>
	</parent>

	<artifactId>spring-cloud-stream-binder-kinesis-parent</artifactId>
	<version>4.0.5-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<java.version>17</java.version>
		<spring-cloud-stream.version>4.0.5</spring-cloud-stream.version>
		<spring-cloud-aws.version>3.0.5</spring-cloud-aws.version>
		<spring-integration-aws.version>3.0.8</spring-integration-aws.version>
		<amazon-kinesis-client.version>2.5.8</amazon-kinesis-client.version>
		<amazon-kinesis-producer.version>0.15.11</amazon-kinesis-producer.version>
		<testcontainers.version>1.20.1</testcontainers.version>
	</properties>

	<modules>
		<module>spring-cloud-stream-binder-kinesis</module>
		<module>spring-cloud-stream-binder-kinesis-docs</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers-bom</artifactId>
				<version>${testcontainers.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>io.awspring.cloud</groupId>
				<artifactId>spring-cloud-aws-dependencies</artifactId>
				<version>${spring-cloud-aws.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-stream-dependencies</artifactId>
				<version>${spring-cloud-stream.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-stream-binder-kinesis</artifactId>
				<version>${project.version}</version>
				<exclusions>
					<exclusion>
						<groupId>software.amazon.kinesis</groupId>
						<artifactId>amazon-kinesis-client</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>org.springframework.integration</groupId>
				<artifactId>spring-integration-aws</artifactId>
				<version>${spring-integration-aws.version}</version>
			</dependency>
			<dependency>
				<groupId>software.amazon.kinesis</groupId>
				<artifactId>amazon-kinesis-client</artifactId>
				<version>${amazon-kinesis-client.version}</version>
			</dependency>
			<dependency>
				<groupId>com.amazonaws</groupId>
				<artifactId>amazon-kinesis-producer</artifactId>
				<version>${amazon-kinesis-producer.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<configuration>
						<quiet>true</quiet>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
			</plugin>
		</plugins>
	</reporting>

	<repositories>
		<!--<repository>
			<id>spring-staging</id>
			<name>Spring Staging</name>
			<url>https://repo.spring.io/libs-staging-local</url>
		</repository>-->
		<repository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
		</repository>
		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
		</pluginRepository>
		<pluginRepository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
		</pluginRepository>
	</pluginRepositories>
</project>
